test/org/midica/testfiles/failing/inc/st-incl-2.midica








FUNCTION test2
	
	
	
	
	
	
	
	{ s=2
		
		{ m
			
			0 d ${dur}
			
		}
		
	}
	
	{ q=2
		{ q=3
			0 e 128  l =${l1}
			0 f 128  l =$[2]_
			
		}
		0 g /4
		CALL test4
	} m
	0 a ${dur}
END

